fixed CSS and HTML layout issues, working ID search function

--- a/src/app/appointment/appointment.component.css
+++ b/src/app/appointment/appointment.component.css
@@ -45,9 +45,8 @@ th, td {
 }
 
 .content {
-  padding: 100px;
-  margin-left: 10%;
-  margin-right: 10%;
+  padding-left: 10%;
+  padding-right: 10%;
 }
 
 th button {
